--- a/Music.Service/Properties/launchSettings.json
+++ b/Music.Service/Properties/launchSettings.json
@@ -4,8 +4,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:62172",
-      "sslPort": 44316
+      "applicationUrl": "http://localhost:62708"
     }
   },
   "profiles": {
