--- a/music.client/package.json
+++ b/music.client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.20.0",
     "react": "^16.13.1",
+    "react-data-grid": "^7.0.0-canary.22",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3"
   },
